src/scss/_ferment-list.scss
@layer components {
  .ferment-list {
    container: ferment-list / inline-size;
    border-collapse: collapse;
    inline-size: 100%;
    th {
      text-align: left;
    }
    :where(th, td) {
      vertical-align: top;
      padding: 0.5rem;
    }
    @container page-main (width >= 550px) {
      &[data-view="table"] {
        :where(th, td) {
          border-block-end: 1px solid var(--border);
          > .ferment-list--cell {
            max-inline-size: 35ch;
          }
        }
      }
      &[data-view="grid"] {
        display: block;
        thead {
          display: none;
        }
        tbody {
          padding: 1rem;
          display: grid;
          gap: 1rem;
          @container ferment-list (width >= 300px) {
            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
          }
        }
        tr {
          display: block;
          border: 1px solid var(--border);
          border-radius: var(--border-radius);
          padding: 0.5rem;
        }
      }
    }
    &--name {
      font-size: 1.15rem;
      margin-block-start: 0.45rem;
    }
    &--time-entry {
      display: flex;
      gap: 0.25rem;
      margin-block-end: 0.35rem;
    }
    &--nodata {
      padding-inline: 1rem;
    };
    &--badges {
      display: flex;
      gap: 0.25rem;
      flex-wrap: wrap;
    }
    &--header,
    &--filters {
      padding-inline: 1rem;
      justify-content: center;
      @container tabpanel (width >= 500px) {
        justify-content: flex-end;
      }
    }
    &--header {
      margin-block: 1rem;
      display: flex;
      align-items: center;
      > h2 {
        margin: 0;
      }
    }
    &--actions {
      padding-inline: 0.5rem;
      display: flex;
      flex-wrap: wrap;
      justify-content: flex-end;
      gap: 0.25rem;
    }
    &--filters {
      display: grid;
      gap: 0.5rem;
      grid-template-columns: auto auto;
    }
    &--pagination {
      margin-block-start: 1rem;
    }
    &--pagination-controls {
      display: flex;
      justify-content: center;
      gap: 0.25rem;
    }
    &--footer {
      margin-block-start: 0.5rem;
      text-align: center;
      > div {
        display: grid;
        justify-content: center;
        align-items: center;
        grid-template-columns: max-content max-content max-content;
        gap: 0.25rem;
        > div:not(:last-child)::after {
          content: " | ";
        }
      }
    }
    &--pagination-quicknav {
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 0.25rem;
    }
    &--narrow-cell {
      display: grid;
      gap: 0.25rem;
      justify-items: start;
      line-height: 1.4;
    }
  }
}
@layer utilities {
  .highlight-row {
    td:first-child {
      outline: 2px solid var(--accent);
      border-radius: var(--border-radius);
    }
    background-color: var(--border);
    transition: background-color 0.3s;
  }
}

